# dfndr

./: README.md
power/upsd-1.2/: Makefile.in  README  configure  configure.ac
power/upsd-1.2/src/: Makefile.am  Makefile.in  common.c  common.h  logger.c  logger.h  main.c  main.h  settings.c  settings.h  upsd.1  upsd.c  upsd.conf  upsd.conf.5  upsd.h
power/upsd-1.2/src/init.d/: upsd
vision/: conf.json  vision.py
